--- a/backend/package.json
+++ b/backend/package.json
@@ -2,8 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "nodemon -r dotenv/config ."
   },
   "keywords": [],
   "author": "",
@@ -14,5 +16,8 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.1.1",
     "nodemon": "^3.1.2"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
